Revision history for Const-Exporter

{{$NEXT}}
  [Enhancements]
  - Check for arrayrefs instead of unblessed arrayrefs.

  - Export coderefs as well as constants.

v0.3.0    2018-01-16 00:45:52+00:00 Europe/London
  [Enhancements]
  - Switch to use Ref::Util.

  [Documentation]
  - Added note about dependencies.

  - Add example for dynamically creating constants at runtime, #4
    (B. Estrade).

  - Fixed typos (B. Estrade).

  - Mention Const::Fast::Exporter in SEE ALSO, #13.

  - Remove note about dependencies.

  - Reformat Changes document.

  [Toolchain]
  - Update distribution to use Dist::Zilla and POD::Weaver.

v0.2.4  2015-01-08
  - No functional changes.

  [Documentation]
  - Bumped copyright year.

  [Incompatabilities]
  - Bumped minimum Perl version to v5.10.1.

  [Other Changes]
  - Removed version from version, to workaround the issue where
    Carton thinks v0.9909 < v0.77 (which is the version included
    w/Perl v5.10.1 anyway).

v0.2.3  2014-08-16
  [Other Changes]
  - MANIFEST.SKIP updated to ignore .travis.yml.

  - Fixed license in Makefile.PL to make CPANTS happy.

v0.2.2  2014-06-24
  [Documentation]
  - Added testing requirements to README.

  [Other Changes]
  - Test::Warnings is only used if the RELEASE_TESTING variable
    is set.

v0.2.1  2014-06-04
  [Documentation]
  - Corrected typos in POD.

  - Added requirements to README.

  - Reformatted Changes.

v0.2.0   2014-05-29
  [Bug Fixes]
  - Bug Fix: scalar constants can have blessed values.

  [Documentation]
  - Fixed typos in POD and Changes file.

  - Fixed formatting of Changes file.

  - Cleaned up details from README using Pod::Readme.

  [Other Changes]
  - Updated MANIFEST.SKIP.

  - Perltidied source code.

  - Added QA tests to the git repo.

  - Removed unnecessary dependency from Makefile.PL.

v0.1.2   2014-02-24

  - Import dies if given the tag "all", since it's reserved.

  - Various documentation improvements.

  - Code cleanup.

v0.1.1   2014-02-23
