@@ -6,6 +6,8 @@ Revision history for Const-Exporter
 
   - Export coderefs as well as constants.
 
+  - Add Const::Fast::const to @EXPORT_OK.
+
 v0.3.0    2018-01-16 00:45:52+00:00 Europe/London
   [Enhancements]
   - Switch to use Ref::Util.
